# turbotavern

./: .gitignore  PROGRESS.md  README.md  app.json  package-lock.json  package.json  settings.gradle.kts  tailwind.config.js
.github/workflows/: ci.yml
android/: README.md  settings.gradle
android/app/: build.gradle
android/bobcore/: .gitignore  PINNED-VERSIONS.md  bobcore.go  build-aar.sh  go.mod  go.sum  rstkill.go  rstkill_test.go
android/cmfa/: hs-skipper.yaml  setup.md  skip.sh
app/: _layout.tsx  build.gradle.kts
components/: ChatBubble.tsx  CompCard.tsx  HeroCard.tsx  TierBadge.tsx
data/: comps.ts  heroes.ts
data-pipeline/: .gitignore  README.md  pyproject.toml  sources.yaml
data-pipeline/scripts/: ppocr_offline.py
data-pipeline/src/bgtiers/: card_renders.py  cli.py  config.py  db.py  entities.py  export_tiers.py  export_trinkets.py  fetch.py  hashing.py  load.py  localize.py  models.py  normalize.py  runlock.py
data-pipeline/tests/: conftest.py  test_card_renders.py  test_cli.py  test_config.py  test_db.py  test_entities.py  test_export_tiers.py  test_export_trinkets.py  test_fetch.py  test_hashing.py  test_integration.py  test_load.py  test_localize.py  test_namekey_vectors.py  test_normalize.py  test_runlock.py  test_smoke.py
data-pipeline/tests/fixtures/: firestone_heroes.json  firestone_trinkets.json  hsjson_cards.json  hsjson_cards_zhTW.json
docs/: failed-paths.md  how-it-works.md
gradle/: libs.versions.toml
i18n/: zh.ts
lib/: claude.ts  overlay.ts  store.ts
mac/: README.md
plugins/: withOverlayService.js
(+410 files in other folders)
