[project]
name = "bgtiers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27", "pyyaml>=6"]

[project.scripts]
bgtiers = "bgtiers.cli:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
